# Monopoly

./: README.md  main.cpp
Monopoly_polished_v1/include/: board.h  computer_player.h  human_player.h  player.h  square.h
Monopoly_polished_v1/src/: board.cpp  computer_player.cpp  human_player.cpp  main.cpp  player.cpp  square.cpp
Monopoly_polished_v2/include/: computer_player.h  square.h
Monopoly_polished_v2/src/: board.cpp  player.cpp
Monopoly_polished_v3/include/: human_player.h  player.h
Monopoly_polished_v3/src/: board.cpp  square.cpp
Monopoly_polished_v4/src/: board.cpp  computer_player.cpp  human_player.cpp  main.cpp  player.cpp
Monopoly_polished_v5/include/: board.h
Monopoly_polished_v5/src/: board.cpp  main.cpp  square.cpp
mon v3/headers/: board.h
mon v3/source/: Monopoly.cpp  player.cpp  tile.cpp
mon v3/utilities/: utilities.cpp  utilities.h
mon v4/headers/: player.h  tile.h
mon v4/source/: board.cpp  player.cpp
mon v4/utilities/: utilities.cpp  utilities.h
mon/headers/: player.h
mon/source/: Monopoly.cpp  player.cpp
mon/utilities/: utilities.cpp  utilities.h
src/: CMakeLists.txt  board.cpp  board.h  computer_player.cpp  computer_player.h  human_player.cpp  human_player.h  monopoly.cpp  player.cpp  player.h  square.cpp  square.h
